<resources>
    <string name="app_name">OmO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userNameHint">Username</string>
    <string name="signIn_t">Sign in</string>
    <string name="email_t">E-mail or Phone Number</string>
    <string name="password_t">Password</string>
    <string name="signInImgDescription">Sign in logo</string>
    <string name="signIn_B">Sign in</string>
    <string name="forgetPass_t"><u>Forget password ?</u></string>
    <string name="noAccount_t">Have no account ?</string>
    <string name="signUp_t">Sign up</string>
    <string name="name_t">Name</string>
    <string name="email2_t">E-mail</string>
    <string name="phone_t">phone number</string>
    <string name="confirmPassword_t">Confirm Password </string>
    <string name="haveAccount_t">Have an account ?</string>
    <string name="continueWith_t">Continue with</string>
    <string name="signUpImgDescription">sign up portrait</string>
    <string name="startStatement">"JOIN THE PARTY WITH "</string>
    <string name="omo">OmO !</string>
    <string name="description_t">Get ready for an epic movie adventure ! Your cinematic journey starts now!</string>
    <string name="getStarted_t">Let\'s Go</string>

    <string name="see_all"><u>see all</u></string>
    <string name="myAccount_t"><b>My Account</b></string>
    <string name="username_t">Username</string>
    <string name="sleepMode_t">Sleep Mode</string>
    <string name="editProfile_t">Edit Profile</string>
    <string name="theme_t">Theme</string>
    <string name="logOut_t">Log Out</string>
    <string name="category1">ACTION</string>
    <string name="storyset">Storyset</string>
    <string name="watchNow">Watch Now</string>
    <string name="change_theme">Change Theme</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Username</string>

</resources>