<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.StartFragment"
    android:background="@color/b4">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/startGif"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/startscreengif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/startscreengif"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/startStatementLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/startGif"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:text="@string/startStatement"
            android:textStyle="bold"
            android:textSize="35sp"
            android:fontFamily="@font/savelemon"
            android:textColor="@color/a4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <TextView
            android:text="@string/omo"
            android:textStyle="bold"
            android:textSize="40sp"
            android:fontFamily="@font/savelemon"
            android:textColor="@color/b1"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/startDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/startStatementLayout"
        android:layout_marginTop="18dp"
        android:text="@string/description_t"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/c2"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/getStartet_b"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="34dp"
        app:cardBackgroundColor="@color/a4"
        app:strokeColor="@color/white"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/startDescription"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sonomedium"
            android:text="@string/getStarted_t"
            android:textColor="@color/b4"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>