<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity"
    android:background="@color/c5">

    <ImageView
        android:id="@+id/signIn_logo"
        android:layout_width="240dp"
        android:layout_height="190dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/signUpImgDescription"
        android:src="@drawable/portrait3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signIn_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/savelemon"
        android:text="@string/signUp_t"
        android:textColor="@color/b4"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/signIn_logo"
        app:layout_constraintStart_toStartOf="@+id/signIn_logo"
        app:layout_constraintTop_toBottomOf="@+id/signIn_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        style="@style/CustomTextInputLayout"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/a2"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/b4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_t">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_ET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/name_t"
            android:textColorHint="@color/white"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        style="@style/CustomTextInputLayout"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/a2"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/b4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email2ET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email_t"
            android:textColorHint="@color/gray3"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        style="@style/CustomTextInputLayout"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/a2"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/b4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_ET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password_t"
            android:textColorHint="@color/gray3"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passCon_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        style="@style/CustomTextInputLayout"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/a2"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/b4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passCon_ET"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/confirmPassword_t"
            android:textColorHint="@color/gray3"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/signUp_B"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="28dp"
        app:cardBackgroundColor="@color/b4"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/passCon_Layout"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sonomedium"
            android:text="@string/signUp_t"
            android:textColor="@color/b2"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/haveAccountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/signUp_B"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haveAccount_t"
            android:textColor="@color/b4"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/signIn_t"
            android:textColor="@color/a1"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ImageView
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/line2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/haveAccountLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/line"
        android:gravity="center">

    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/google_icon"/>
    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/facebook_icon"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>